--- a/Spatial_Analysis.ipynb
+++ b/Spatial_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7O4gt3SKJsSWR+XDSxSSf",
+      "authorship_tag": "ABX9TyOsxF8reczm6WUhqiNv2vA+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1286,6 +1286,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**How does varying the number of basis functions affect the accuracy of the final model?**"
+      ],
+      "metadata": {
+        "id": "CnWtG6FZ9hbb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "\n",
         "\n",
@@ -1317,12 +1326,30 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**what do you think would be the impact of using all of the training data as basis function centres?**"
+      ],
+      "metadata": {
+        "id": "3cIFBUeT-Jrp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "\n",
         "*   This would lead to a model as complex as the data itself. While it could capture every small thing in the training set perfectly, it's like creating a map with every rock and blade of grass. It might be too detailed to be useful for understanding the terrain's general layout. If a new piece of terrain data is slightly different, the model might give an inaccurate prediction because it's too fixated on the details of the training set."
       ],
       "metadata": {
         "id": "QMb1icSHqu2i"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Is there a good way to select which training data points might make the best basis function centres?**"
+      ],
+      "metadata": {
+        "id": "EL0rWD1y-V7h"
       }
     },
     {
@@ -1340,6 +1367,16 @@
       ],
       "metadata": {
         "id": "2G1QJ7oxqx8O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Can you think of other ways that you could model this kind of data? What if the amount of data was very large - say the grid was 1,000,000 x 1,000,000 instead of 50 x 50 - what difficulties might this kind of data introduce and how might you go about solving this\n",
+        "problem?**"
+      ],
+      "metadata": {
+        "id": "twOhJu1C-azm"
       }
     },
     {
